src/objects/Order_Item_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Item</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Item Charges</relationshipLabel>
        <relationshipName>Order_Item_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora_Rate_Plan_Charge_Id__c</fullName>
        <label>Zuora Rate Plan Charge Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Rate_Plan_Id__c</fullName>
        <label>Zuora Rate Plan Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Order Item Charge</label>
    <nameField>
        <label>Zuora Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Item Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>